# connect4

./: .gitignore  ConnectFour.hs  Main.hs  Makefile  README.md  connect4.cabal  package.yaml  stack.yaml
cli/: CLI.hs  Main.hs
src/: CLI.hs  ComputerPlayer.hs  ConnectFour.hs  Main.hs
src/ConnectFour/: ComputerPlayer.hs
