name:                connect4
version:             0.1.0.0
synopsis:            Play connect 4 from a command line interface
description:         A simple connect 4 interface with extensible game properties
license:             MIT
license-file:        LICENSE
author:              Patrick Herrmann
maintainer:          patrickwherrmann@gmail.com
copyright:           2015, Patrick Herrmann
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type:              git
    location:          https://github.com/patrickherrmann/connect4.git

executable connect4
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base == 4.*,
                       split,
                       array,
                       optparse-applicative,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010