name:                  connect4
version:               0.1.0.0
synopsis:              Play connect 4 from a command line interface
description:           A simple connect 4 interface with extensible game properties
license:               MIT
license-file:          LICENSE
author:                Patrick Herrmann
maintainer:            patrickwherrmann@gmail.com
copyright:             2015, Patrick Herrmann
category:              Game
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

source-repository head
  type:                git
  location:            https://github.com/patrickherrmann/connect4.git

library
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       ViewPatterns
                       LambdaCase
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  exposed-modules:     ConnectFour
                       ConnectFour.ComputerPlayer
  build-depends:       base == 4.*,
                       array,
                       mtl,
                       containers

executable connect4
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       ViewPatterns
                       LambdaCase
  ghc-options:         -Wall -O2
  hs-source-dirs:      cli
  main-is:             Main.hs
  build-depends:       base == 4.*,
                       connect4,
                       array,
                       split,
                       containers,
                       optparse-applicative